<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/et_cream">

    <!-- Navigation bar with logo and profile icon -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo  -->

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="100dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <!-- Profile icon button (goes to ProfileActivity) -->
        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            android:src="@android:drawable/ic_menu_manage" />
    </LinearLayout>

    <!-- "Select your tour" -->
    <TextView
        android:id="@+id/tvSelectTour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select your tour"
        android:textColor="@color/et_blue_dark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Button list -->
    <LinearLayout
        android:id="@+id/tourButtonContainer"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectTour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnSavedTours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_tours" />

        <Button
            android:id="@+id/btnBitesPints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bites and Pints Tour"
            android:textSize="20sp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_button_primary" />

        <Button
            android:id="@+id/btnBookshop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bookshop Tour"
            android:textSize="20sp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_button_primary" />

        <Button
            android:id="@+id/btnCafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cafe Tour"
            android:textSize="20sp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_button_primary" />

        <Button
            android:id="@+id/btnHistorical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Historical Tour"
            android:textSize="20sp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_button_primary" />

        <Button
            android:id="@+id/btnNature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nature Tour"
            android:textSize="20sp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_button_primary"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
